@@ -1,5 +1,8 @@
 2010-05-14  Carsten Dominik  <carsten.dominik@gmail.com>
 
+	* org-latex.el (org-export-latex-tables): Accept comma in
+	align string.
+
 	* org-docbook.el (org-export-docbook-xslt-stylesheet): New option.
 	(org-export-docbook-xslt-proc-command): Fix docstring.
 	(org-export-docbook-xsl-fo-proc-command): Fix docstring.
